--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,16 @@
         <param-name>origin</param-name>
         <param-value>http://127.0.0.1:5500</param-value>
     </context-param>
+
+    <filter>
+        <filter-name>CORSFilter</filter-name>
+        <filter-class>lk.ijse.filter.CORSFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CORSFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <resource-ref>
         <description>DB Connection</description>
         <res-ref-name>jdbc/stuRegistration</res-ref-name>
